fixed: spacing and colors

--- a/src/app/components/content/content.component.css
+++ b/src/app/components/content/content.component.css
@@ -3,6 +3,10 @@
     color: var(--atri-green);
 }
 
+.author {
+    color: var(--atri-green-dark);
+}
+
 .mb {
     margin-bottom: .8rem; 
 }
@@ -11,10 +15,14 @@
     margin-top: 1.2rem;
 }
 
+.start {
+    margin-top: .8rem;
+}
+
 .date {
-    margin: .6rem 1rem 0 1.6rem;
+    margin: 2rem 2.8rem 0 3.2rem;
     display: flex;
-    color: #fff;
+    color: #dcdcdc;
     text-align: end;
     flex-direction: column;
 }
@@ -22,13 +30,14 @@
 .content {
     display: flex;
     flex-direction: column;
-    color: #fff;
+    color: #fafafa;
     width: 70%;
     text-align: justify;
 }
 
 .article {
     display: flex;
+    margin-top: 1rem;
 }
 
 .btn {
@@ -40,8 +49,9 @@
     width: fit-content;
     background-color: var(--atri-bg);
     padding: .25rem 1rem;
-    border: .1rem solid var(--atri-green);
+    border: .1rem solid var(--atri-green-medium);
     border-radius: 4rem;
+    color: var(--atri-green-medium)
 }
 
 .flex {
@@ -54,4 +64,12 @@
 
 .end {
     margin-bottom: 4rem;
+}
+
+.indent {
+    text-indent: 1px;
+}
+
+.subtitle {
+    font-size: .8rem;
 }
